# wristcontrol

./: .gitignore  CLAUDE.md  LICENSE  PRD_ Voice and gesture computer control system.md  README.md  requirements.txt
desktop/: README.md  pyproject.toml
desktop/src/wristcontrol/: __init__.py  main.py
desktop/src/wristcontrol/bluetooth/: __init__.py  manager.py  protocol.py
desktop/src/wristcontrol/core/: __init__.py  app.py  config.py
desktop/src/wristcontrol/cursor/: __init__.py  controller.py
desktop/src/wristcontrol/gestures/: __init__.py  processor.py
desktop/src/wristcontrol/voice/: __init__.py  processor.py
desktop/tests/: __init__.py  test_config.py  test_protocol.py
planning/: README.md  RESEARCH_SUMMARY.md  architecture-guide.md  ble-research-report.md  deployment-strategy.md  desktop-app-research.md  implementation-plan.md  library-comparison.md  motion-to-cursor-algorithms.md  reference-implementations.md  speech-to-text-research.md  testing-strategy.md  touchsdk-research.md
research/: wearos-development-guide.md
watch/: README.md
web/: docs.html  index.html
web/css/: docs.css  styles.css
web/js/: docs.js  main.js
